@@ -54,6 +54,8 @@
 		xml_stream_state,
 		timeout}).
 
+-define(HIBERNATE_TIMEOUT, 90000).
+
 %%====================================================================
 %% API
 %%====================================================================
@@ -146,7 +148,7 @@ handle_call({starttls, TLSSocket}, _From,
 			   xml_stream_state = NewXMLStreamState},
     case tls:recv_data(TLSSocket, "") of
 	{ok, TLSData} ->
-	    {reply, ok, process_data(TLSData, NewState)};
+	    {reply, ok, process_data(TLSData, NewState), ?HIBERNATE_TIMEOUT};
 	{error, _Reason} ->
 	    {stop, normal, ok, NewState}
     end;
@@ -161,7 +163,7 @@ handle_call({compress, ZlibSocket}, _From,
 			   xml_stream_state = NewXMLStreamState},
     case ejabberd_zlib:recv_data(ZlibSocket, "") of
 	{ok, ZlibData} ->
-	    {reply, ok, process_data(ZlibData, NewState)};
+	    {reply, ok, process_data(ZlibData, NewState), ?HIBERNATE_TIMEOUT};
 	{error, _Reason} ->
 	    {stop, normal, ok, NewState}
     end;
@@ -172,17 +174,18 @@ handle_call(reset_stream, _From,
     xml_stream:close(XMLStreamState),
     NewXMLStreamState = xml_stream:new(C2SPid, MaxStanzaSize),
     Reply = ok,
-    {reply, Reply, State#state{xml_stream_state = NewXMLStreamState}};
+    {reply, Reply, State#state{xml_stream_state = NewXMLStreamState},
+     ?HIBERNATE_TIMEOUT};
 handle_call({become_controller, C2SPid}, _From, State) ->
     XMLStreamState = xml_stream:new(C2SPid, State#state.max_stanza_size),
     NewState = State#state{c2s_pid = C2SPid,
 			   xml_stream_state = XMLStreamState},
     activate_socket(NewState),
     Reply = ok,
-    {reply, Reply, NewState};
+    {reply, Reply, NewState, ?HIBERNATE_TIMEOUT};
 handle_call(_Request, _From, State) ->
     Reply = ok,
-    {reply, Reply, State}.
+    {reply, Reply, State, ?HIBERNATE_TIMEOUT}.
 
 %%--------------------------------------------------------------------
 %% Function: handle_cast(Msg, State) -> {noreply, State} |
@@ -192,11 +195,11 @@ handle_call(_Request, _From, State) ->
 %%--------------------------------------------------------------------
 handle_cast({change_shaper, Shaper}, State) ->
     NewShaperState = shaper:new(Shaper),
-    {noreply, State#state{shaper_state = NewShaperState}};
+    {noreply, State#state{shaper_state = NewShaperState}, ?HIBERNATE_TIMEOUT};
 handle_cast(close, State) ->
     {stop, normal, State};
 handle_cast(_Msg, State) ->
-    {noreply, State}.
+    {noreply, State, ?HIBERNATE_TIMEOUT}.
 
 %%--------------------------------------------------------------------
 %% Function: handle_info(Info, State) -> {noreply, State} |
@@ -212,19 +215,21 @@ handle_info({Tag, _TCPSocket, Data},
 	tls ->
 	    case tls:recv_data(Socket, Data) of
 		{ok, TLSData} ->
-		    {noreply, process_data(TLSData, State)};
+		    {noreply, process_data(TLSData, State),
+		     ?HIBERNATE_TIMEOUT};
 		{error, _Reason} ->
 		    {stop, normal, State}
 	    end;
 	ejabberd_zlib ->
 	    case ejabberd_zlib:recv_data(Socket, Data) of
 		{ok, ZlibData} ->
-		    {noreply, process_data(ZlibData, State)};
+		    {noreply, process_data(ZlibData, State),
+		     ?HIBERNATE_TIMEOUT};
 		{error, _Reason} ->
 		    {stop, normal, State}
 	    end;
 	_ ->
-	    {noreply, process_data(Data, State)}
+	    {noreply, process_data(Data, State), ?HIBERNATE_TIMEOUT}
     end;
 handle_info({Tag, _TCPSocket}, State)
   when (Tag == tcp_closed) or (Tag == ssl_closed) ->
@@ -233,15 +238,18 @@ handle_info({Tag, _TCPSocket, Reason}, State)
   when (Tag == tcp_error) or (Tag == ssl_error) ->
     case Reason of
 	timeout ->
-	    {noreply, State};
+	    {noreply, State, ?HIBERNATE_TIMEOUT};
 	_ ->
 	    {stop, normal, State}
     end;
 handle_info({timeout, _Ref, activate}, State) ->
     activate_socket(State),
-    {noreply, State};
+    {noreply, State, ?HIBERNATE_TIMEOUT};
+handle_info(timeout, State) ->
+    proc_lib:hibernate(gen_server, enter_loop, [?MODULE, [], State]),
+    {noreply, State, ?HIBERNATE_TIMEOUT};
 handle_info(_Info, State) ->
-    {noreply, State}.
+    {noreply, State, ?HIBERNATE_TIMEOUT}.
 
 %%--------------------------------------------------------------------
 %% Function: terminate(Reason, State) -> void()
